--- a/sass/_splash.sass
+++ b/sass/_splash.sass
@@ -18,6 +18,7 @@ section .container
     position: absolute
     width: 100%
     height: 1px
+    left: 0
 
 .sign_up,
 .join_us
